<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">2320666658219620</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">2320666658219620</string>
    //TWITTER
    <string name="twitter_consumer_key" translatable="false">GOz3syHBxkxHoBOfAqvuMKGEA</string>
    <string name="twitter_consumer_secret" translatable="false">ApVeNNU3j5SF9O2GxdkcLBLr9Jzv8YyAonjevmCr1tAFWcajiR</string>
    <!--Firebase-->
    <string name="error_unknown_error">"an error has occurred"</string>
    <string name="error_not_connected">You need to be logged</string>
    <string name="error_authentication_canceled">Authentication cancel !</string>
    <string name="error_no_internet">No internet connection !</string>
    <string name="connection_succeed">Authentication successful !</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="welcome_text">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="avatar_picture">avatar picture</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">search</string>
    <string name="logo">logo</string>
    <string name="search_restaurants">Search restaurants</string>
    <string name="user_logout">User log out</string>
    <string name="person">person</string>
    <string name="star">star</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="delete_account">delete account</string>
    <string name="popup_message_confirmation_delete_account">you\'re going to delete your account, are you sure ?</string>
    <string name="popup_message_choice_yes">yes</string>
    <string name="popup_message_choice_no">no</string>
    <string name="isJoining"> is joining!</string>
    <string name="decideYet"> hasn\'t decided yet</string>
    <string name="eatingAt"> is eating at</string>
    <string name="default_notification_channel_id">firebaseNotification</string>
    <string name="notificationTitle">reminder</string>
    <string name="incoming_message">incoming message from Firebase</string>
    <string name="notification">Notification</string>
    <string name="no_choice">You haven\'t choose any restaurant yet !</string>
    <string name="going_to_lunch">you\'re going to lunch at</string>
    <string name="update_username">update username</string>
    <string name="new_username">new username</string>
    <string name="update_usermane_success">username successfully updated to</string>
    <string name="updateUsernameError">the new username should be bigger than 2 characters</string>
    <string name="new_email">new email</string>
    <string name="update_email">update email</string>
    <string name="update_email_success">email successfully updated to</string>
    <string name="updateEmailError">please enter a valid address email</string>
    <string name="with">with</string>
    <string name="closes">closed</string>
    <string name="open">Open 24/7</string>
    <string name="open_until">Open until</string>
    <string name="eraseData">Erase data</string>
    <string name="data_erase_succes">data successfully erased</string>
    <string name="not_eating_nearby">is not eating nearby you</string>
    <string name="unable_get_location">Unable to get current location  have you enable localisation on your device ?</string>
    <string name="no_place_found">No place found !</string>
    <string name="error_occurred">an error has occurred</string>
    <string name="unknown">unknown</string>
    <string name="no_email">no email found</string>
    <string name="no_username">no username found</string>
    <string name="_500">500</string>
    <string name="_1500">1500</string>
    <string name="_3000">3000</string>
    <string name="choose_your_search_radius_meter">search radius in meter : </string>
    <string name="gps_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="no_gps_no_app">sorry, you can\'t use this app without GPS</string>

</resources>
