<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_lunch"
            android:icon="@drawable/ic_lunch_white"
            android:title="@string/your_lunch"
            />
        <item
            android:id="@+id/activity_main_drawer_settings"
            android:icon="@drawable/ic_setting_white"
            android:title="@string/settings" />
        <item
            android:id="@+id/activity_main_drawer_logout"
            android:icon="@drawable/ic_logout_white"
            android:title="@string/logout" />
    </group>


</menu>