<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fragment_detail_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_plus_one"
        app:layout_anchor="@id/detail_relative_layout"
        app:layout_anchorGravity="top|right|end" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".controller.activities.DetailActivity">

<ImageView
    android:id="@+id/activity_detail_photo_imageview"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3"
    tools:src="@mipmap/ic_launcher"
    android:contentDescription="@string/logo" />

<RelativeLayout
    android:id="@+id/detail_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:background="@color/colorPrimary">


    <TextView
        android:id="@+id/activity_detail_place_name_textview"
        style="@style/white_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:text="Chez Mario" />

    <ImageView
        android:id="@+id/activity_detail_star1_imageview"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/activity_detail_place_name_textview"
        android:contentDescription="@string/star"
        android:src="@drawable/ic_star"
        android:visibility="invisible"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/activity_detail_star2_imageview"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/activity_detail_star1_imageview"
        android:contentDescription="@string/star"
        android:src="@drawable/ic_star"
        android:visibility="invisible"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/activity_detail_star3_imageview"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/activity_detail_star2_imageview"
        android:contentDescription="@string/star"
        android:src="@drawable/ic_star"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/activity_detail_place_address_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_detail_place_name_textview"
        android:layout_margin="8dp"
        android:textColor="@android:color/white"
        tools:text="12, rue d'Italie" />
</RelativeLayout>

<android.support.constraint.ConstraintLayout
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <ImageView
        android:id="@+id/activity_detail_phone_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_phone"
        app:layout_constraintEnd_toStartOf="@+id/activity_detail_star_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_detail_call_textview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activity_detail_like_textview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/activity_detail_star_icon"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toTopOf="@+id/activity_detail_like_textview"
        app:layout_constraintEnd_toStartOf="@+id/activity_detail_web_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView

        android:id="@+id/activity_detail_like_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activity_detail_web_textview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activity_detail_call_textview" />

    <ImageView
        android:id="@+id/activity_detail_web_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_phone"
        app:layout_constraintBottom_toTopOf="@+id/activity_detail_web_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/activity_detail_web_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/website"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activity_detail_like_textview" />

</android.support.constraint.ConstraintLayout>

<android.support.v7.widget.RecyclerView
    android:id="@+id/activity_detail_recycleview"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3" />
</LinearLayout>
</android.support.design.widget.CoordinatorLayout>